feat: pattern CRUD
